plugin/gnc-tree-view-account.h

/* typedefs & structures */
typedef struct AccountViewInfo_s     AccountViewInfo;
typedef struct
{
    GncTreeView   gnc_tree_view;
    int           stamp;
} GncTreeViewAccount;
/*  @name Account Tree View Constructors
 @{ */

/**
 * gnc_tree_view_account_new_with_root:
 * @root : The account to use as the first level of the created tree.
 * @show_root : Show the pseudo top-level account in this view.
 * return : (transfer full) : A pointer to a new account tree view.
 * 
 *  Create a new account tree view.  This view may or may not show a
 *  pseudo top-level account.  The gnucash engine does not have a
 *  single top level account (it has a list of top level accounts),
 *  but this code provides one so that it can be used with all parts
 *  of the gnucash gui.
 *
 *  @param root The account to use as the first level of the created tree.
 *
 *  @param show_root Show the pseudo top-level account in this view.
 *
 *  @return A pointer to a new account tree view.
 */
GtkTreeView *gnc_tree_view_account_new_with_root (Account *root,
        gboolean show_root);
/**
 * gnc_tree_view_account_new:
 * @show_root : Show the pseudo top-level account in this view.
 * return : (transfer full) : A pointer to a new account tree view.
 *
 *  Create a new account tree view.  This view may or may not show a
 *  pseudo top-level account.  The gnucash engine does not have a
 *  single top level account (it has a list of top level accounts),
 *  but this code provides one so that it can be used with all parts
 *  of the gnucash gui.  The first level of accounts in the created
 *  tree will be the top level of accounts in the current book.
 *
 *  @param show_root Show the pseudo top-level account in this view.
 *
 *  @return A pointer to a new account tree view.
 */
GtkTreeView *gnc_tree_view_account_new (gboolean show_root);
/*  @} */


/*  @name Account Tree View Filtering
 @{ */

/**
 * gnc_tree_view_account_get_view_info:
 * @account_view : A pointer to an account tree view.
 * @avi : A pointer to an old style filter block to fill in.
 *
 *  Given pointers to an account tree and old style filter block, this
 *  function will copy the current configuration of the account tree
 *  widget into the data block.  This may be used in conjunction with
 *  the gnc_tree_view_account_set_view_info function to modify the
 *  filters on an existing account tree.
 *
 *  @param account_view A pointer to an account tree view.
 *
 *  @param avi A pointer to an old style filter block to fill in.
 */
void gnc_tree_view_account_get_view_info (GncTreeViewAccount *account_view,
        AccountViewInfo *avi);
/**
 * gnc_tree_view_account_set_view_info:
 * @account_view : A pointer to an account tree view.
 * @avi : A pointer to an old style filter block to fill in.
 *
 *  Given pointers to an account tree and old style filter block, this
 *  function will applies the settings specified to the current
 *  configuration of the account tree widget.  This may be used in
 *  conjunction with the gnc_tree_view_account_get_view_info function
 *  to modify the filters on an existing account tree.
 *
 *  @param account_view A pointer to an account tree view.
 *
 *  @param avi A pointer to an old style filter block to apply to the
 *  view.
 */
void gnc_tree_view_account_set_view_info (GncTreeViewAccount *account_view,
        AccountViewInfo *avi);
/**
 * gnc_tree_view_account_get_cursor_account:
 * @view : A pointer to an account tree view.
 * return : (transfer none) : The account at the cursor.
 *
 *  This function returns the account in the account tree view at the
 *  current location of the cursor. (The outline frame. Usually is
 *  selected and therefore filled in, but not always.)
 *
 *  @param view A pointer to an account tree view.
 *
 *  @return The account at the cursor.
 */
Account * gnc_tree_view_account_get_cursor_account (GncTreeViewAccount *view);
/**
 * gnc_tree_view_account_get_selected_accounts:
 * @view : A pointer to an account tree view.
 * return : (element-type Account*) (transfer container) : A list of accounts, or NULL if no account was selected.
 *
 *  This function returns a list of the accounts associated with the
 *  selected items in the account tree view.
 *
 *  @note It only makes sense to call this function when the account
 *  tree is set to select multiple items.  There is a different
 *  function to use when the tree supports single selection.
 *
 *  @param view A pointer to an account tree view.
 *
 *  @return A list of accounts, or NULL if no account was selected.
 */
GList * gnc_tree_view_account_get_selected_accounts (GncTreeViewAccount *view);
/**
 * gnc_tree_view_account_set_selected_accounts:
 * @view : A pointer to an account tree view.
 * @account_list : (array zero-terminated=1) (element-type Account*) : A list of accounts to select.
 * @show_last : Force the window to scroll to the last account
    selected.
 *
 *  This function selects a set of accounts in the account tree view.
 *  All other accounts will be unselected.  In addition, this function
 *  collapses the entitre tree and then expands only the path to the
 *  selected accounts, making them easy to find.  In general, this
 *  routine only need be called when initially putting up a window
 *  containing an account tree view widget.
 *
 *  @note It only makes sense to call this function when the account
 *  tree is set to select a single item.  There is a different
 *  function to use when the tree supports multiple selections.
 *
 *  @note It is the responsibility of the caller to free the returned
 *  list.
 *
 *  @param view A pointer to an account tree view.
 *
 *  @param account_list A list of accounts to select.
 *
 *  @param show_last Force the window to scroll to the last account
 *  selected.
 */
void gnc_tree_view_account_set_selected_accounts (GncTreeViewAccount *view,
        GList *account_list,
        gboolean show_last);
/**
 * gnc_tree_view_account_select_subaccounts:
 * @view : A pointer to an account tree view.
 * @account : A pointer to the account whose children should be
    selected.
 *
 *  This function selects all sub-accounts of an account in the
 *  account tree view.  All other accounts will be unselected.
 *
 *  @note It only makes sense to call this function when the account
 *  tree is set to select multiple items.  There is a different
 *  function to use when the tree supports multiple selections.
 *
 *  @param view A pointer to an account tree view.
 *
 *  @param account A pointer to the account whose children should be
 *  selected.
 */
void gnc_tree_view_account_select_subaccounts (GncTreeViewAccount *view,
        Account *account);