plugin/gnc-main-window.h

/* typedefs & structures */

/*
 * GncMainWindow:
 *  The instance data structure for a main window object.
 */
typedef struct GncMainWindow
{
    GtkWindow gtk_window;	/*< The parent object for a main window. */
    GtkUIManager *ui_merge;     /*< A pointer to the UI Manager data
				    structure for the whole window. */
} GncMainWindow;
typedef struct
{
    GncMainWindow *window;
    gpointer data;
} GncMainWindowActionData;
/**
 * gnc_main_window_open_page:
 * @window : The window to display a new page in.
 * @page : The new page of data to be displayed, or the existing
    page of data the should be brought to the top and displayed.
 *
 *  Display a data plugin page in a window.  If the page already
 *  exists in any window, then that window will be brought to the
 *  front and the notebook switch to display the specified page.  If
 *  the page is new then it will be added to the specified window
 *  (unless the page itself requests otherwise.).  If the window is
 *  NULL, the new page will be added to the first window.
 *
 *  @param window The window to display a new page in.
 *
 *  @param page The new page of data to be displayed, or the existing
 *  page of data the should be brought to the top and displayed.
 */
void gnc_main_window_open_page (GncMainWindow *window,
                                GncPluginPage *page);
/**
 * gnc_main_window_close_page:
 * @page : The page of data to be removed.
 *
 *  Remove a data plugin page from a window and display the previous
 *  page.  If the page removed was the last page in the window, and
 *  there is more than one window open, then the entire window will be
 *  destroyed.
 *
 *  @param page The page of data to be removed.
 */
void gnc_main_window_close_page (GncPluginPage *page);